--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_SPOTIFY_CLIENT_ID=your_client_id_here
-VITE_SPOTIFY_CLIENT_SECRET=your_client_secret_here
-VITE_SPOTIFY_REDIRECT_URI=http://localhost:3000/callback
+VITE_SPOTIFY_CLIENT_ID=636fd9d45cdb4a33bd10e27aad45d9e1
+VITE_SPOTIFY_CLIENT_SECRET=658ad91651314424ab77121cd7fc6f20
+VITE_SPOTIFY_REDIRECT_URI=http://127.0.0.1:5173
