--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_SPOTIFY_CLIENT_ID=636fd9d45cdb4a33bd10e27aad45d9e1
 VITE_SPOTIFY_CLIENT_SECRET=658ad91651314424ab77121cd7fc6f20
-VITE_SPOTIFY_REDIRECT_URI=http://127.0.0.1:5173
+VITE_SPOTIFY_REDIRECT_URI=http://127.0.0.1:3000/callback
